<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="56dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="30dp">

        <TextView
            style="@style/SemiBold36Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ivCart"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_cart"
            android:backgroundTint="@color/red_accent"
            android:contentDescription="@string/cart_icon" />

    </LinearLayout>

    <EditText
        android:id="@+id/etSearch"
        style="@style/Regular12Sp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_radius16dp"
        android:gravity="center_vertical"
        android:hint="@string/search_here"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="@color/dark_accent"
        android:textColorHint="@color/light_disabled"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvErrorMessage"
        style="@style/Medium14Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/error_connecting_to_api"
        android:textColor="@color/red_accent"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingEnd="18dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_layout" />

</LinearLayout>