<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_primary"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/dark_accent"
            android:contentDescription="@string/cart_icon" />

        <TextView
            style="@style/SemiBold36Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cart" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvErrorMessage"
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/error_connecting_to_api"
                android:textColor="@color/red_accent"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressLoading"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvEmptyCart"
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/your_cart_is_still_empty"
                android:textColor="@color/dark_accent"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cart" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>